archive/kubernetes/apps/default/microbin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microbin
  labels:
    app.kubernetes.io/instance: microbin
    app.kubernetes.io/name: microbin
spec:
  replicas: 1
  revisionHistoryLimit: 0
  serviceName: "microbin"
  selector:
    matchLabels:
      app.kubernetes.io/instance: microbin
      app.kubernetes.io/name: microbin
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: microbin
        app.kubernetes.io/name: microbin
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: nvme
          nfs:
            server: openmediavault.oyoy.lan
            path: /nvme/apps/microbin
      containers:
        - name: microbin
          image: danielszabo99/microbin:2.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nvme
              mountPath: /data
