archive/kubernetes/apps/default/microbin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbin
  labels:
    app.kubernetes.io/part-of: microbin
    app.kubernetes.io/name: microbin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: microbin
    app.kubernetes.io/name: microbin
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
