archive/kubernetes/apps/default/microbin/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microbin
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: microbin.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microbin
                port:
                  name: http
  tls:
    - secretName: microbin-tls
      hosts:
        - microbin.fadhlika.com
